--- a/Project/newproject.build_log.htm
+++ b/Project/newproject.build_log.htm
@@ -3,16 +3,10 @@
 <pre>
 <h1>µVision Build Log</h1>
 <h2>Project:</h2>
-E:\Computer Year 3\MCArm\Project\newproject.uvproj
+E:\Computer Year 3\MCArm\MICROPROCESSORS_01_G22\Project\newproject.uvproj
 Project File Date:  03/13/2019
 
 <h2>Output:</h2>
-Build target 'Project'
-compiling DIO.c...
-compiling __main.c...
-linking...
-Program Size: Code=276 RO-data=620 RW-data=0 ZI-data=512  
-".\newproject.axf" - 0 Error(s), 0 Warning(s).
-.\newproject.axf" - 1 Error(s), 0 Warning(s).
-Target not created
-oject.axf" - 0 Error(s), 1 Warning(s).
+</pre>
+</body>
+</html>
