add DIO_WritePort function

--- a/Project/newproject.build_log.htm
+++ b/Project/newproject.build_log.htm
@@ -3,44 +3,10 @@
 <pre>
 <h1>µVision Build Log</h1>
 <h2>Project:</h2>
-E:\Computer Year 3\MCArm\MICROPROCESSORS_01_G22\Project\newproject.uvproj
-Project File Date:  03/13/2019
+C:\Users\amarz\OneDrive\Desktop\MICROPROCESSORS_01_G22\Project\newproject.uvproj
+Project File Date:  03/14/2019
 
 <h2>Output:</h2>
-Build target 'Project'
-compiling DIO.c...
-DIO.c(69): warning:  #188-D: enumerated type mixed with another type
-                        return 0;
-DIO.c: 1 warning, 0 errors
-linking...
-Program Size: Code=276 RO-data=620 RW-data=0 ZI-data=512  
-".\newproject.axf" - 0 Error(s), 1 Warning(s).
 </pre>
 </body>
 </html>
-eak;
-DIO.c(29): warning:  #111-D: statement is unreachable
-                                break;
-DIO.c(34): warning:  #111-D: statement is unreachable
-                                break;
-DIO.c(39): warning:  #111-D: statement is unreachable
-                                break;
-DIO.c(54): warning:  #111-D: statement is unreachable
-                                break;
-DIO.c(59): warning:  #111-D: statement is unreachable
-                                break;
-DIO.c(64): warning:  #111-D: statement is unreachable
-                                break;
-DIO.c(69): warning:  #111-D: statement is unreachable
-                                break;
-DIO.c(74): warning:  #111-D: statement is unreachable
-                                break;
-DIO.c(79): warning:  #111-D: statement is unreachable
-                                break;
-DIO.c(81): warning:  #188-D: enumerated type mixed with another type
-                        return 0;
-DIO.c: 13 warnings, 0 errors
-compiling MCAL.c...
-linking...
-Program Size: Code=276 RO-data=620 RW-data=0 ZI-data=512  
-".\newproject.axf" - 0 Error(s), 13 Warning(s).
