read_port implementation update

--- a/Project/newproject.build_log.htm
+++ b/Project/newproject.build_log.htm
@@ -3,8 +3,8 @@
 <pre>
 <h1>µVision Build Log</h1>
 <h2>Project:</h2>
-C:\Users\amarz\OneDrive\Desktop\MICROPROCESSORS_01_G22\Project\newproject.uvproj
-Project File Date:  03/14/2019
+E:\Computer Year 3\MCArm\MICROPROCESSORS_01_G22\Project\newproject.uvproj
+Project File Date:  03/13/2019
 
 <h2>Output:</h2>
 </pre>
