--- a/Project/newproject.build_log.htm
+++ b/Project/newproject.build_log.htm
@@ -3,10 +3,16 @@
 <pre>
 <h1>µVision Build Log</h1>
 <h2>Project:</h2>
-C:\Users\amarz\OneDrive\Desktop\MICROPROCESSORS_01_G22\Project\newproject.uvproj
+C:\Users\ROFL\Documents\GitHub\MICROPROCESSORS_01_G22\Project\newproject.uvproj
 Project File Date:  03/14/2019
 
 <h2>Output:</h2>
-</pre>
-</body>
-</html>
+Build target 'Project'
+compiling DIO.c...
+DIO.c(67): warning:  #188-D: enumerated type mixed with another type
+                        return 0;;
+DIO.c: 1 warning, 0 errors
+compiling MCAL.c...
+linking...
+Program Size: Code=276 RO-data=620 RW-data=0 ZI-data=512  
+".\newproject.axf" - 0 Error(s), 1 Warning(s).
