--- a/Project/newproject.build_log.htm
+++ b/Project/newproject.build_log.htm
@@ -4,23 +4,21 @@
 <h1>µVision Build Log</h1>
 <h2>Project:</h2>
 E:\KEIL\Project\newproject.uvproj
-Project File Date:  03/13/2019
+Project File Date:  03/16/2019
 
 <h2>Output:</h2>
 Build target 'Project'
-compiling DIO.c...
-DIO.c(91): warning:  #188-D: enumerated type mixed with another type
-                        return 0;;
-DIO.c(150): warning:  #1-D: last line of file ends without a newline
-  }
-DIO.c: 2 warnings, 0 errors
-compiling MCAL.c...
 compiling __main.c...
-compiling Port_Init.c...
-compiling Port_SetPinDirection.c...
+compiling PushButton.c...
 linking...
 Program Size: Code=276 RO-data=620 RW-data=0 ZI-data=512  
-".\newproject.axf" - 0 Error(s), 2 Warning(s).
+".\newproject.axf" - 0 Error(s), 0 Warning(s).
 </pre>
 </body>
 </html>
+g: Mode=JTAG, Speed=1000000Hz
+Erase Done.
+Programming Done.
+Verify OK.
+ramming Done.
+Verify OK.
