create timer driver and implement OneShotTimer_init()

--- a/Project/newproject.build_log.htm
+++ b/Project/newproject.build_log.htm
@@ -3,22 +3,10 @@
 <pre>
 <h1>µVision Build Log</h1>
 <h2>Project:</h2>
-E:\KEIL\Project\newproject.uvproj
+C:\Users\amarz\OneDrive\Desktop\MICROPROCESSORS_01_G22\Project\newproject.uvproj
 Project File Date:  03/16/2019
 
 <h2>Output:</h2>
-Build target 'Project'
-compiling __main.c...
-compiling PushButton.c...
-linking...
-Program Size: Code=276 RO-data=620 RW-data=0 ZI-data=512  
-".\newproject.axf" - 0 Error(s), 0 Warning(s).
 </pre>
 </body>
 </html>
-g: Mode=JTAG, Speed=1000000Hz
-Erase Done.
-Programming Done.
-Verify OK.
-ramming Done.
-Verify OK.
