fix decleration error in timer_init.c

--- a/Project/newproject.build_log.htm
+++ b/Project/newproject.build_log.htm
@@ -7,6 +7,36 @@ C:\Users\amarz\OneDrive\Desktop\MICROPROCESSORS_01_G22\Project\newproject.uvproj
 Project File Date:  03/16/2019
 
 <h2>Output:</h2>
+Rebuild target 'Project'
+compiling DIO.c...
+DIO.c(91): warning:  #188-D: enumerated type mixed with another type
+                        return 0;
+DIO.c: 1 warning, 0 errors
+compiling MCAL.c...
+assembling startup_TM4C123.s...
+compiling __main.c...
+compiling Port_Init.c...
+compiling Port_SetPinDirection.c...
+compiling Port_SetPull.c...
+compiling PushButton.c...
+compiling Port_SetPinPullUp.c...
+compiling Timer_Delay.c...
+compiling timer_init.c...
+linking...
+Program Size: Code=276 RO-data=620 RW-data=0 ZI-data=512  
+".\newproject.axf" - 0 Error(s), 1 Warning(s).
 </pre>
 </body>
 </html>
+1 warning, 0 errors
+compiling timer_init.c...
+linking...
+Program Size: Code=276 RO-data=620 RW-data=0 ZI-data=512  
+".\newproject.axf" - 0 Error(s), 3 Warning(s).
+warning:  #1295-D: Deprecated declaration Timer_init - give arg types
+  void Timer_init();
+timer_init.c: 1 warning, 0 errors
+linking...
+Program Size: Code=276 RO-data=620 RW-data=0 ZI-data=512  
+".\newproject.axf" - 0 Error(s), 5 Warning(s).
+ 0 Error(s), 5 Warning(s).
