--- a/Project/newproject.htm
+++ b/Project/newproject.htm
@@ -3,11 +3,11 @@
 <title>Static Call Graph - [.\newproject.axf]</title></head>
 <body><HR>
 <H1>Static Call Graph for image .\newproject.axf</H1><HR>
-<BR><P>#&#060CALLGRAPH&#062# ARM Linker, 5.03 [Build 76]: Last Updated: Sun Mar 17 17:51:53 2019
+<BR><P>#&#060CALLGRAPH&#062# ARM Linker, 5.03 [Build 76]: Last Updated: Sun Mar 17 21:11:08 2019
 <BR><P>
-<H3>Maximum Stack Usage =          0 bytes + Unknown(Functions without stacksize, Cycles, Untraceable Function Pointers)</H3><H3>
+<H3>Maximum Stack Usage =          8 bytes + Unknown(Functions without stacksize, Cycles, Untraceable Function Pointers)</H3><H3>
 Call chain for Maximum Stack Depth:</H3>
-
+__main &rArr; Port_SetPinPullUp
 <P>
 <H3>
 Functions with no stack information
@@ -264,6 +264,20 @@ Function Pointers
 <H3>
 Global Symbols
 </H3>
+<P><STRONG><a name="[80]"></a>DIO_ReadPort</STRONG> (Thumb, 80 bytes, Stack size 0 bytes, dio.o(.text), UNUSED)
+
+<P><STRONG><a name="[81]"></a>DIO_ReadPort_level</STRONG> (Thumb, 116 bytes, Stack size 0 bytes, dio.o(.text), UNUSED)
+
+<P><STRONG><a name="[7c]"></a>DIO_WritePort</STRONG> (Thumb, 240 bytes, Stack size 8 bytes, dio.o(.text))
+<BR><BR>[Stack]<UL><LI>Max Depth = 8<LI>Call Chain = DIO_WritePort
+</UL>
+<BR>[Called By]<UL><LI><a href="#[76]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__main
+</UL>
+
+<P><STRONG><a name="[7f]"></a>DIO_FlipPort</STRONG> (Thumb, 116 bytes, Stack size 0 bytes, dio.o(.text))
+<BR><BR>[Called By]<UL><LI><a href="#[76]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__main
+</UL>
+
 <P><STRONG><a name="[77]"></a>Reset_Handler</STRONG> (Thumb, 4 bytes, Stack size 0 bytes, startup_tm4c123.o(.text))
 
 <P><STRONG><a name="[1]"></a>NMI_Handler</STRONG> (Thumb, 2 bytes, Stack size 0 bytes, startup_tm4c123.o(.text))
@@ -1087,14 +1101,52 @@ Global Symbols
 </UL>
 <P><STRONG><a name="[78]"></a>__user_initial_stackheap</STRONG> (Thumb, 0 bytes, Stack size unknown bytes, startup_tm4c123.o(.text), UNUSED, KEPT)
 
-<P><STRONG><a name="[76]"></a>__main</STRONG> (Thumb, 2 bytes, Stack size 0 bytes, __main.o(.text))
+<P><STRONG><a name="[76]"></a>__main</STRONG> (Thumb, 70 bytes, Stack size 0 bytes, __main.o(.text))
+<BR><BR>[Stack]<UL><LI>Max Depth = 8<LI>Call Chain = __main &rArr; Port_SetPinPullUp
+</UL>
+<BR>[Calls]<UL><LI><a href="#[7e]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;delay_ms
+<LI><a href="#[7d]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;Timer_init
+<LI><a href="#[7b]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;Port_SetPinPullUp
+<LI><a href="#[7a]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;Port_SetPinDirection
+<LI><a href="#[79]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;Port_Init
+<LI><a href="#[7f]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;DIO_FlipPort
+<LI><a href="#[7c]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;DIO_WritePort
+</UL>
 <BR>[Address Reference Count : 1]<UL><LI> startup_tm4c123.o(.text)
 </UL>
-<P><STRONG><a name="[79]"></a>__use_two_region_memory</STRONG> (Thumb, 2 bytes, Stack size 0 bytes, heapauxi.o(.text), UNUSED)
+<P><STRONG><a name="[79]"></a>Port_Init</STRONG> (Thumb, 464 bytes, Stack size 0 bytes, port_init.o(.text))
+<BR><BR>[Called By]<UL><LI><a href="#[76]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__main
+</UL>
 
-<P><STRONG><a name="[7a]"></a>__rt_heap_escrow$2region</STRONG> (Thumb, 2 bytes, Stack size 0 bytes, heapauxi.o(.text), UNUSED)
+<P><STRONG><a name="[7a]"></a>Port_SetPinDirection</STRONG> (Thumb, 72 bytes, Stack size 8 bytes, port_setpindirection.o(.text))
+<BR><BR>[Stack]<UL><LI>Max Depth = 8<LI>Call Chain = Port_SetPinDirection
+</UL>
+<BR>[Called By]<UL><LI><a href="#[76]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__main
+</UL>
 
-<P><STRONG><a name="[7b]"></a>__rt_heap_expand$2region</STRONG> (Thumb, 2 bytes, Stack size 0 bytes, heapauxi.o(.text), UNUSED)
+<P><STRONG><a name="[7b]"></a>Port_SetPinPullUp</STRONG> (Thumb, 72 bytes, Stack size 8 bytes, port_setpull.o(.text))
+<BR><BR>[Stack]<UL><LI>Max Depth = 8<LI>Call Chain = Port_SetPinPullUp
+</UL>
+<BR>[Called By]<UL><LI><a href="#[76]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__main
+</UL>
+
+<P><STRONG><a name="[82]"></a>Port_SetPinPulldown</STRONG> (Thumb, 84 bytes, Stack size 8 bytes, port_setpull.o(.text), UNUSED)
+
+<P><STRONG><a name="[7e]"></a>delay_ms</STRONG> (Thumb, 46 bytes, Stack size 0 bytes, timer_delay.o(.text))
+<BR><BR>[Called By]<UL><LI><a href="#[76]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__main
+</UL>
+
+<P><STRONG><a name="[83]"></a>delay_us</STRONG> (Thumb, 42 bytes, Stack size 0 bytes, timer_delay.o(.text), UNUSED)
+
+<P><STRONG><a name="[7d]"></a>Timer_init</STRONG> (Thumb, 50 bytes, Stack size 0 bytes, timer_init.o(.text))
+<BR><BR>[Called By]<UL><LI><a href="#[76]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__main
+</UL>
+
+<P><STRONG><a name="[84]"></a>__use_two_region_memory</STRONG> (Thumb, 2 bytes, Stack size 0 bytes, heapauxi.o(.text), UNUSED)
+
+<P><STRONG><a name="[85]"></a>__rt_heap_escrow$2region</STRONG> (Thumb, 2 bytes, Stack size 0 bytes, heapauxi.o(.text), UNUSED)
+
+<P><STRONG><a name="[86]"></a>__rt_heap_expand$2region</STRONG> (Thumb, 2 bytes, Stack size 0 bytes, heapauxi.o(.text), UNUSED)
 <P>
 <H3>
 Local Symbols
