--- a/Project/newproject.build_log.htm
+++ b/Project/newproject.build_log.htm
@@ -3,22 +3,48 @@
 <pre>
 <h1>µVision Build Log</h1>
 <h2>Project:</h2>
-E:\KEIL\Project\newproject.uvproj
-Project File Date:  03/17/2019
+C:\Users\ROFL\Documents\GitHub\MICROPROCESSORS_01_G22\Project\newproject.uvproj
+Project File Date:  03/18/2019
 
 <h2>Output:</h2>
-Build target 'Project'
+Rebuild target 'Project'
+compiling DIO.c...
+DIO.c(91): warning:  #188-D: enumerated type mixed with another type
+                        return 0;
+DIO.c: 1 warning, 0 errors
+compiling MCAL.c...
+assembling startup_TM4C123.s...
+compiling __main.c...
+includes.h(7): warning:  #1-D: last line of file ends without a newline
+  #include "GPIO.h"
+__main.c(25): warning:  #223-D: function "LCD_init" declared implicitly
+        LCD_init();
+__main.c(27): warning:  #223-D: function "LCD_sendInt" declared implicitly
+        LCD_sendInt(count);
+__main.c(43): warning:  #223-D: function "LCD_clearScreen" declared implicitly
+                                LCD_clearScreen();
+__main.c(56): warning:  #223-D: function "LCD_clearScreen" declared implicitly
+                        LCD_clearScreen();
+__main.c(74): warning:  #223-D: function "LCD_clearScreen" declared implicitly
+                        LCD_clearScreen();
+__main.c: 6 warnings, 0 errors
+compiling Port_Init.c...
+compiling Port_SetPinDirection.c...
+compiling Port_SetPull.c...
+compiling PushButton.c...
+compiling Port_SetPinPullUp.c...
 compiling Timer_Delay.c...
+compiling timer_init.c...
+compiling LCD.c...
+LCD.h(12): warning:  #1-D: last line of file ends without a newline
+  #endif
+LCD.c(49): warning:  #1-D: last line of file ends without a newline
+  }
+LCD.c: 2 warnings, 0 errors
 linking...
-Program Size: Code=1892 RO-data=620 RW-data=0 ZI-data=512  
-".\newproject.axf" - 0 Error(s), 0 Warning(s).
-Load "E:\\KEIL\\Project\\newproject.axf" 
-Connecting: Mode=JTAG, Speed=1000000Hz
-Erase Done.
-Programming Done.
-Verify OK.
-</pre>
-</body>
-</html>
-elled. Debugger aborted !
-Error: Target DLL has been cancelled. Debugger aborted !
+.\newproject.axf: Error: L6218E: Undefined symbol LCD_clearScreen (referred from __main.o).
+.\newproject.axf: Error: L6218E: Undefined symbol LCD_init (referred from __main.o).
+Not enough information to list image symbols.
+Finished: 1 information, 0 warning and 2 error messages.
+".\newproject.axf" - 2 Error(s), 9 Warning(s).
+Target not created
