--- a/Project/newproject.build_log.htm
+++ b/Project/newproject.build_log.htm
@@ -2,49 +2,62 @@
 <body>
 <pre>
 <h1>µVision Build Log</h1>
+<h2>Tool Versions:</h2>
+IDE-Version: µVision V5.26.2.0
+Copyright (C) 2018 ARM Ltd and ARM Germany GmbH. All rights reserved.
+License Information: Matthew Nabih, Student, LIC=----
+ 
+Tool Versions:
+Toolchain:       MDK-Lite  Version: 5.26.2.0
+Toolchain Path:  D:\Keil_V5\ARM\ARMCC\Bin
+C Compiler:      Armcc.exe V5.06 update 6 (build 750)
+Assembler:       Armasm.exe V5.06 update 6 (build 750)
+Linker/Locator:  ArmLink.exe V5.06 update 6 (build 750)
+Library Manager: ArmAr.exe V5.06 update 6 (build 750)
+Hex Converter:   FromElf.exe V5.06 update 6 (build 750)
+CPU DLL:         SARMCM3.DLL V5.26.2.0
+Dialog DLL:      DCM.DLL V1.17.2.0
+Target DLL:      lmidk-agdi.dll V???
+Dialog DLL:      TCM.DLL V1.36.1.0
+ 
 <h2>Project:</h2>
-C:\Users\ROFL\Documents\GitHub\MICROPROCESSORS_01_G22\Project\newproject.uvproj
+D:\MICROPROCESSORS_01_G22\Project\newproject.uvprojx
 Project File Date:  03/18/2019
 
 <h2>Output:</h2>
-Rebuild target 'Project'
-compiling DIO.c...
-DIO.c(91): warning:  #188-D: enumerated type mixed with another type
-                        return 0;
-DIO.c: 1 warning, 0 errors
-compiling MCAL.c...
-assembling startup_TM4C123.s...
-compiling __main.c...
-includes.h(7): warning:  #1-D: last line of file ends without a newline
-  #include "GPIO.h"
-__main.c(25): warning:  #223-D: function "LCD_init" declared implicitly
-        LCD_init();
-__main.c(27): warning:  #223-D: function "LCD_sendInt" declared implicitly
-        LCD_sendInt(count);
-__main.c(43): warning:  #223-D: function "LCD_clearScreen" declared implicitly
-                                LCD_clearScreen();
-__main.c(56): warning:  #223-D: function "LCD_clearScreen" declared implicitly
-                        LCD_clearScreen();
-__main.c(74): warning:  #223-D: function "LCD_clearScreen" declared implicitly
-                        LCD_clearScreen();
-__main.c: 6 warnings, 0 errors
-compiling Port_Init.c...
-compiling Port_SetPinDirection.c...
-compiling Port_SetPull.c...
-compiling PushButton.c...
-compiling Port_SetPinPullUp.c...
-compiling Timer_Delay.c...
-compiling timer_init.c...
+*** Using Compiler 'V5.06 update 6 (build 750)', folder: 'D:\Keil_V5\ARM\ARMCC\Bin'
+Build target 'Project'
 compiling LCD.c...
-LCD.h(12): warning:  #1-D: last line of file ends without a newline
-  #endif
-LCD.c(49): warning:  #1-D: last line of file ends without a newline
-  }
-LCD.c: 2 warnings, 0 errors
-linking...
-.\newproject.axf: Error: L6218E: Undefined symbol LCD_clearScreen (referred from __main.o).
-.\newproject.axf: Error: L6218E: Undefined symbol LCD_init (referred from __main.o).
-Not enough information to list image symbols.
-Finished: 1 information, 0 warning and 2 error messages.
-".\newproject.axf" - 2 Error(s), 9 Warning(s).
-Target not created
+LCD.c(10): error:  #268: declaration may not appear after executable statement in block
+  		char* ptr = result, *ptr1 = result, tmp_char;
+LCD.c(11): error:  #268: declaration may not appear after executable statement in block
+  		int tmp_value;
+LCD.c: 0 warnings, 2 errors
+".\newproject.axf" - 2 Error(s), 0 Warning(s).
+
+<h2>Software Packages used:</h2>
+
+Package Vendor: ARM
+                http://www.keil.com/pack/ARM.CMSIS.5.4.0.pack
+                ARM.CMSIS.5.4.0
+                CMSIS (Cortex Microcontroller Software Interface Standard)
+   * Component: CORE Version: 5.1.2
+
+Package Vendor: Keil
+                http://www.keil.com/pack/Keil.TM4C_DFP.1.1.0.pack
+                Keil.TM4C_DFP.1.1.0
+                Texas Instruments Tiva C Series Device Support and Examples
+
+<h2>Collection of Component include folders:</h2>
+  .\RTE\_Project
+  D:\Keil_V5\ARM\PACK\ARM\CMSIS\5.4.0\CMSIS\Core\Include
+  D:\Keil_V5\ARM\PACK\Keil\TM4C_DFP\1.1.0\Device\Include\TM4C123
+
+<h2>Collection of Component Files used:</h2>
+
+   * Component: ARM::CMSIS:CORE:5.1.2
+Target not created.
+Build Time Elapsed:  00:00:01
+</pre>
+</body>
+</html>
