--- a/Project/newproject.build_log.htm
+++ b/Project/newproject.build_log.htm
@@ -3,10 +3,25 @@
 <pre>
 <h1>µVision Build Log</h1>
 <h2>Project:</h2>
-E:\Computer Year 3\MCArm\MICROPROCESSORS_01_G22\Project\newproject.uvproj
-Project File Date:  03/18/2019
+E:\KEIL\Project\newproject.uvproj
+Project File Date:  03/19/2019
 
 <h2>Output:</h2>
-</pre>
-</body>
-</html>
+Build target 'Project'
+compiling __main.c...
+linking...
+Program Size: Code=2984 RO-data=692 RW-data=0 ZI-data=512  
+".\newproject.axf" - 0 Error(s), 0 Warning(s).
+Load "E:\\KEIL\\Project\\newproject.axf" 
+Connecting: Mode=JTAG, Speed=1000000Hz
+Erase Done.
+Programming Done.
+Verify OK.
+Error: Target DLL has been cancelled. Debugger aborted !
+D.c(96): warning:  #1-D: last line of file ends without a newline
+  }
+LCD.c: 1 warning, 0 errors
+compiling Pin_Init.c...
+linking...
+Program Size: Code=2440 RO-data=692 RW-data=0 ZI-data=512  
+".\newproject.axf" - 0 Error(s), 1 Warning(s).
